--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "json-server": "^1.0.0-alpha.23"
   }
 }
